--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!--    required for appropriate scaling for Material-UI-->
+    <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+    >
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Material-UI fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
